[gd_scene load_steps=18 format=3 uid="uid://cvdct1hr02skt"]

[ext_resource type="Texture2D" uid="uid://b0xypme5n06bv" path="res://assets/interface/play.png" id="1_v1l3p"]
[ext_resource type="Script" path="res://scripts/menu.gd" id="1_vvwpc"]
[ext_resource type="Texture2D" uid="uid://cagifhuu3rmvi" path="res://assets/interface/credits.png" id="2_qa8v5"]
[ext_resource type="Texture2D" uid="uid://bxsoi80bs2yj4" path="res://assets/interface/title.png" id="3_kukc6"]
[ext_resource type="Script" path="res://scripts/parallax_background.gd" id="4_njq2b"]
[ext_resource type="Texture2D" uid="uid://dd8221fob4rpx" path="res://assets/background/004.png" id="4_yi2uj"]
[ext_resource type="Texture2D" uid="uid://dscltufwj4bjx" path="res://assets/background/003.png" id="5_jffyi"]
[ext_resource type="Texture2D" uid="uid://ccgin3elmagfg" path="res://assets/background/002.png" id="6_4evg7"]
[ext_resource type="Texture2D" uid="uid://b02kagdmx6ew4" path="res://assets/background/001.png" id="7_sqr2s"]
[ext_resource type="Texture2D" uid="uid://ctr5dn1qm70s6" path="res://assets/background/000.png" id="8_w87ii"]
[ext_resource type="Script" path="res://scripts/button.gd" id="9_80yn0"]
[ext_resource type="FontFile" uid="uid://crjbkr52m6fs7" path="res://assets/misc/Pixel Game.otf" id="12_n75rr"]
[ext_resource type="Texture2D" uid="uid://bb8gyg08s64y8" path="res://assets/interface/back.png" id="13_dpq8x"]
[ext_resource type="AudioStream" uid="uid://cpoi5386ebytp" path="res://assets/misc/press.mp3" id="14_4y1dn"]

[sub_resource type="Animation" id="Animation_ep76q"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FadeIn/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_1tcii"]
resource_name = "fade"
length = 4.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FadeIn/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 3, 4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_a0jss"]
_data = {
"RESET": SubResource("Animation_ep76q"),
"fade": SubResource("Animation_1tcii")
}

[node name="Menu" type="CanvasLayer"]
layer = 128
script = ExtResource("1_vvwpc")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
layer = 0
visible = false
script = ExtResource("4_njq2b")

[node name="004" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(1, 0)
motion_offset = Vector2(1, 0)
motion_mirroring = Vector2(1920, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/004"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("4_yi2uj")
centered = false

[node name="003" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.05, 0.01)
motion_offset = Vector2(1, 0)
motion_mirroring = Vector2(1920, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/003"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("5_jffyi")
centered = false

[node name="002" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.1, 0.015)
motion_offset = Vector2(1, 0)
motion_mirroring = Vector2(1920, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/002"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("6_4evg7")
centered = false

[node name="001" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(1, 0.02)
motion_offset = Vector2(1, 0)
motion_mirroring = Vector2(1920, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/001"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("7_sqr2s")
centered = false

[node name="000" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.2, 0.03)
motion_offset = Vector2(1, 0)
motion_mirroring = Vector2(1920, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/000"]
position = Vector2(0, 100)
scale = Vector2(0.5, 0.5)
texture = ExtResource("8_w87ii")
centered = false

[node name="CanvasModulate" type="CanvasModulate" parent="ParallaxBackground"]
color = Color(0.8, 0.8, 0.8, 1)

[node name="Main" type="Node2D" parent="."]

[node name="FadeIn" type="AnimationPlayer" parent="Main"]
libraries = {
"": SubResource("AnimationLibrary_a0jss")
}

[node name="ColorRect" type="ColorRect" parent="Main/FadeIn"]
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(1, 1, 1, 0)

[node name="Play" type="Button" parent="Main"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 407.0
offset_top = 700.0
offset_right = 1375.0
offset_bottom = 1248.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.3, 0.3)
icon = ExtResource("1_v1l3p")
flat = true
script = ExtResource("9_80yn0")

[node name="Credits" type="Button" parent="Main"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 1222.0
offset_top = 700.0
offset_right = 2190.0
offset_bottom = 1248.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.3, 0.3)
icon = ExtResource("2_qa8v5")
flat = true
script = ExtResource("9_80yn0")

[node name="Sprite2D" type="Sprite2D" parent="Main"]
position = Vector2(960, 400)
scale = Vector2(1.2, 1.2)
texture = ExtResource("3_kukc6")

[node name="Credits" type="Node2D" parent="."]
visible = false

[node name="RichTextLabel" type="RichTextLabel" parent="Credits"]
offset_top = 150.0
offset_right = 1920.0
offset_bottom = 9505.0
theme_override_fonts/normal_font = ExtResource("12_n75rr")
theme_override_font_sizes/normal_font_size = 72
bbcode_enabled = true
text = "[center]Lead Developer: eznarwhal

Game Script: eznarwhal

Asset Artist (no flex): eznarwhal

Soundtrack: ScientistWasTaken

Play Tester: Sanguine-Caligo

Game Engine: Godot"
fit_content = true
scroll_active = false

[node name="Back" type="Button" parent="Credits"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 1674.0
offset_top = 940.0
offset_right = 2642.0
offset_bottom = 1488.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.25, 0.25)
icon = ExtResource("13_dpq8x")
flat = true
script = ExtResource("9_80yn0")

[node name="Press" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("14_4y1dn")
volume_db = -15.0

[connection signal="mouse_entered" from="Main/Play" to="Main/Play" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Main/Play" to="Main/Play" method="_on_mouse_exited"]
[connection signal="pressed" from="Main/Play" to="." method="_on_play_pressed"]
[connection signal="mouse_entered" from="Main/Credits" to="Main/Credits" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Main/Credits" to="Main/Credits" method="_on_mouse_exited"]
[connection signal="pressed" from="Main/Credits" to="." method="_on_credits_pressed"]
[connection signal="mouse_entered" from="Credits/Back" to="Credits/Back" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Credits/Back" to="Credits/Back" method="_on_mouse_exited"]
[connection signal="pressed" from="Credits/Back" to="." method="_on_back_pressed"]
